Fix some tests